tests/invalid_typecheck/test_tc_missing_main.aphi
/*
Type-check error: Missing 'main' procedure.
The program has a procedure but it is not named 'main'.
*/

int x;

procedure notMain {
    x = 1;
}
